fixed minor alignment issue

--- a/app/styles/track.scss
+++ b/app/styles/track.scss
@@ -10,6 +10,7 @@
 .track-list-item {
   padding:pxToRem(10);
   border-bottom: 1px solid #b3b3b3;
+  align-items: flex-start;
 }
 
 .track-inputs {
